--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MattTour/copytop_api#readme",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
