--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,9 +54,22 @@ services:
       - 8081:80
     networks:
       - mysql-phpmyadmin
+  rabbitmq:
+    image: rabbitmq:3.8-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"   # Port pour le protocole AMQP
+      - "15672:15672" # Port pour l'interface de gestion RabbitMQ
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_ERLANG_COOKIE: 'secret_cookie'
 
 volumes:
   dbdata:
+  rabbitmq_data:
 
 networks:
   mysql-phpmyadmin:
